<resources>
    <string name="app_name">Counting Sheep</string>

    <!--    Time-->
    <string name="time_clock_24h">%tR</string>
    <string name="time_date_time_cal">%1$ta, %1$td.%1$tm.%1$tY</string>
    <string name="time_h_min_dur_long">%1$d hours, %2$d minutes</string>
    <string name="time_h_min_dur_short">%1$dh, %2$dmin</string>
    <string name="time_h_min_dur_extra_short">%1$dh, %2$dm</string>
    <string name="time_year">%1$d</string>
    <string name="time_timerange">%1$tR - %2$tR</string>
    <string name="time_week_number">Week %1$d</string>
    <string-array name="time_week_days_en">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    
<!--    Buttons-->
    <string name="buttons_edit">Edit</string>
    <string name="buttons_delete">Delete</string>
    <string name="buttons_stats_toggle_on">Chart</string>
    <string name="buttons_stats_toggle_off">List</string>
    <string name="button_OK">OK</string>
    <string name="button_not_now">Not Now</string>
    <string name="button_no">No</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_yes">Yes</string>
    <string name="button_apply">Apply</string>
    <string name="button_submit">Submit</string>
    <string name="button_reset">Reset</string>

    <!--    Image descriptions-->
    <string name="img_desc_trending_up">Increased</string>
    <string name="img_desc_trending_down">Decreased</string>
    <string name="img_desc_user_rating_very_bad">Very bad</string>
    <string name="img_desc_user_rating_bad">Bad</string>
    <string name="img_desc_user_rating_ok">OK</string>
    <string name="img_desc_user_rating_good">Good</string>
    <string name="img_desc_user_rating_very_good">Very Good</string>
    
<!--    Sleep Entry Inspection-->
    <string name="sleep_inspection_caffeine_intake_label">Caffeine intake</string>
    <string name="sleep_inspection_quality_label">Sleep Quality</string>
    <string name="sleep_inspection_caffeine_amount">%d Cups</string>

    <string name="title_activity_quetionnaire">Quetionnaire</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="editNumber">Enter a number</string>
    <string name="submitButton">Submit</string>
    <string name="title_activity_sleep">Sleep</string>

    <!-- Tips-->
    <string-array name="tips_array">
        <item>Relax and clean your mind in the evening! Relaxation techniques before bed, including hot baths and meditation, may help you fall asleep.</item>
        <item>Take a melatonin supplement, it`s an easy way to improve sleep quality and fall asleep faster.</item>
        <item>Avoid alcohol before bed, as it can reduce nighttime melatonin production and lead to disrupted sleep patterns.</item>
        <item>Make your bedroom comfortable, dark, quiet, and not too warm or cold.</item>
        <item>Try to get into a regular sleep/wake cycle — especially on the weekends. If possible, try to wake up naturally at a similar time every day.</item>
        <item>Optimize your bedroom environment by eliminating external light and noise to get better sleep.</item>
        <item>Optimize your bedroom environment by eliminating external light and noise to get better sleep.</item>
        <item>Relaxation techniques before bed, including hot baths and meditation, may help you fall asleep.</item>
        <item>Regular exercise during daylight hours is one of the best ways to ensure a good night’s sleep.</item>
        <item>Reduce blue light exposure in the evening. It tricks your body into thinking it’s daytime.</item>
    </string-array>

<!--    Wake up event dialog -->
    <string name="wake_up_event_greeting">Good morning!</string>
    <string name="wake_up_event_request">Fill the details</string>

<!--    Start sleep dialog -->
    <string name="start_sleep_event_header">Go to sleep?</string>

<!--    Settings-->
    <string name="settings_statistics">Chart</string>
    <string name="settings_track_caffeine">Track caffeine</string>
    <string name="settings_track_overall_fealing">Track overall fealing</string>
    <string name="settings_user_header">User</string>
    <string name="settings_alarm_clock_header">Alarm Clock</string>
    <string name="settings_clock_format">Use 24 hour format</string>
    <string name="settings_use_native_alarm_clock">Launch native app</string>
    <string name="settings_username">Username</string>

<!--    menu bar -->
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_tips">Info</string>

<!--    Goals-->
    <string name="goals_label_Cups">Cups</string>
    <string name="goals_header_caffeine">DAILY CAFFEINE INTAKE</string>
    <string name="goals_label_mins">min</string>
    <string name="goals_header_sleep">TARGET SLEEP TIME</string>
    <string name="goals_label_hour">h</string>

    <!-- Quetionnaire-->
    <string name="quetionnaire_heading">How was the sleep last night?</string>
    <string name="quetionnaire_sleepDuration">Sleep duration:</string>
    <string name="quetionnaire_q1">Overall feelings?</string>
    <string name="quetionnaire_q3">Caffein intake yesterday?</string>
    <string name="quetionnaire_q3_2">Cups</string>
    <string name="quetionnaire_submitBtn">Submit</string>
    <string name="q_header">How was your sleep last night?</string>
    <string name="q_caffeine_query">How much caffeine you had last day?</string>
    <string name="q_auality_query">Sleep Quality?</string>
    <string name="q_caffeine_unit">Coffee cups</string>
</resources>