<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuetionnaireActivity"
    android:background="@color/darker_gray_blue"
  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/dark_gray_blue"
        >

        <TextView
            android:id="@+id/heading02_tv"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:fontFamily="casual"
            android:rotationY="0"
            android:text="@string/quetionnaire_heading"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_blue">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/light_blue">
                <TextView
                    android:id="@+id/sleepDuration_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quetionnaire_sleepDuration"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/duration_tv"
                    android:layout_width="137dp"
                    android:layout_height="39dp"
                    android:gravity="center_horizontal"
                    android:textAlignment="center" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/q1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/quetionnaire_q1"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:elevation="5dp"
            app:cardCornerRadius="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >

            <RadioGroup
                android:id="@+id/radioGroupQ1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/light_blue">

                <RadioButton
                    android:id="@+id/emoVerySatisfied_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:background="@drawable/emo_selector"
                    android:button="@drawable/ic_baseline_sentiment_very_satisfied_64"/>
                <RadioButton
                    android:id="@+id/emoSatisfied_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:background="@drawable/emo_selector"
                    android:button="@drawable/ic_baseline_sentiment_satisfied_64"/>
                <RadioButton
                    android:id="@+id/emoNeutral_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:background="@drawable/emo_selector"
                    android:button="@drawable/ic_baseline_sentiment_neutral_64"/>
                <RadioButton
                    android:id="@+id/emoDissatisfied_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:background="@drawable/emo_selector"
                    android:button="@drawable/ic_baseline_sentiment_dissatisfied_64"/>
                <RadioButton
                    android:id="@+id/emoVeryDissatisfied_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:background="@drawable/emo_selector"
                    android:button="@drawable/ic_baseline_sentiment_very_satisfied_64"/>


            </RadioGroup>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quetionnaire_q3"
                android:textStyle="bold"></TextView>


            <EditText
                android:id="@+id/editNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number"
                android:text="@string/quetionnaire_editNumber"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/q3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/quetionnaire_q3_2"></TextView>

        </LinearLayout>

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/white"
            android:text="@string/quetionnaire_submitBtn" />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>