<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/sleep_entry_inspection_timerange_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/sleep_entry_inspect_date_tv"
        app:layout_constraintTop_toBottomOf="@+id/sleep_entry_inspect_date_tv"
        tools:text="18:23 - 07:32" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/sleep_inspection_quality_label"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sleep_entry_inspect_dur_tv" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/sleep_inspection_caffeine_intake_label"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/sleep_entry_inspect_date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Wed, 20.12.2020" />

    <TextView
        android:id="@+id/sleep_entry_inspect_dur_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/sleep_entry_inspection_timerange_tv"
        app:layout_constraintTop_toBottomOf="@+id/sleep_entry_inspection_timerange_tv"
        tools:text="8h 30min" />

    <ImageView
        android:id="@+id/sleep_entry_inspection_success_icon_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:src="@drawable/ic_check_48"
        app:layout_constraintStart_toEndOf="@+id/sleep_entry_inspect_date_tv"
        app:layout_constraintTop_toTopOf="@+id/sleep_entry_inspect_date_tv"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/sleep_etnry_inspection_duration_increase_icon_iv"
        android:layout_width="51dp"
        android:layout_height="43dp"
        android:src="@drawable/ic_baseline_expand_less_48"
        app:layout_constraintBottom_toBottomOf="@+id/sleep_entry_inspect_dur_tv"
        app:layout_constraintStart_toEndOf="@+id/sleep_entry_inspect_dur_tv"
        app:layout_constraintTop_toTopOf="@+id/sleep_entry_inspect_dur_tv"
        app:layout_constraintVertical_bias="0.333"
        android:contentDescription="@string/img_desc_trending_down" />

    <ImageView
        android:id="@+id/sleep_entry_inspection_rating_growth_iv"
        android:layout_width="71dp"
        android:layout_height="63dp"
        android:src="@drawable/ic_baseline_expand_less_48"
        app:layout_constraintBottom_toBottomOf="@+id/sleep_entry_inspection_rating_iv"
        app:layout_constraintStart_toEndOf="@+id/sleep_entry_inspection_rating_iv"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:contentDescription="@string/img_desc_trending_down" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="71dp"
        android:layout_height="63dp"
        android:src="@drawable/ic_baseline_expand_less_48"
        app:layout_constraintBottom_toBottomOf="@+id/sleep_entry_inspection_rating_iv"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/sleep_entry_inspection_rating_growth_iv"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/img_desc_trending_down" />

    <ImageView
        android:id="@+id/sleep_entry_inspection_rating_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_sentiment_very_dissatisfied_64"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        android:contentDescription="@string/img_desc_trending_down" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/sleep_entry_inspection_rating_iv"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="3 Cups"/>

    <Button
        android:id="@+id/button"
        android:layout_width="154dp"
        android:layout_height="77dp"
        android:layout_marginBottom="32dp"
        android:text="@string/buttons_edit"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>